# rust-web

./: .editorconfig  .env  Cargo.toml  README.md  Rocket.toml
hooks-with-rust/: package.json
hooks-with-rust/config/: webpack.config.js
hooks-with-rust/src/: App.module.css  App.tsx  index.tsx  request.js
migrations/2019-02-03-085243_create_users/: up.sql
migrations/2019-02-05-081213_create_users/: up.sql
src/: cors.rs  main.rs  res.rs  schema.rs
src/db/: mod.rs  user.rs
src/res/: mod.rs
src/router/: user.rs
templates/: base.html.tera  index.html.tera
