[package]
name = "app"
version = "0.1.0"
authors = ["chaixb <1481569358@qq.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0.81"
serde_derive = "1.0"

[global]
template_dir = "templates/"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]
