[package]
name = "app"
version = "0.1.0"
authors = ["chaixb <1481569358@qq.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0.81"
serde_derive = "1.0"
diesel = { version = "1.0.0" }
dotenv = "0.9.0"
base64 = "0.10.1"


[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "tera_templates", "json", "diesel_postgres_pool"]
